--- a/PruebaAplicacion/templates/pedidosclt/consulta.html
+++ b/PruebaAplicacion/templates/pedidosclt/consulta.html
@@ -9,14 +9,17 @@
     <h1 class="bg-primary text-center">Listado de Pedidos</h1>
     <table class="table table-bordered table-hover justify-content-center" id="tablametodos">
         <th>ID PEDIDO</th>
+
         {% if current_user.is_authenticated and current_user.is_vendedor() %}
         <th>ID COMPRADOR</th>
         {% endif %}
+
         {% if current_user.is_authenticated and current_user.is_comprador() %}
         <th>ID VENDEDOR</th>
         {% endif %}
+
         <th>ID TARJETA</th>
-        <th>FECGA DE REGISTRO</th>
+        <th>FECHA DE REGISTRO</th>
         <th>FECHA DE ATENCION</th>
         <th>FECHA DE CIERRE</th>
         <th>FECHA DE RECEPCION</th>
@@ -27,12 +30,15 @@
         {% for ped in pedido %}
             <tr>
                 <td>{{ped.idPedido}}</td>
+
                 {% if current_user.is_authenticated and current_user.is_vendedor() %}
                 <td>{{ped.idComprador}}</td>
                 {% endif %}
+
                 {% if current_user.is_authenticated and current_user.is_comprador() %}
                 <td>{{ped.idVendedor}}</td>
                 {% endif %}
+
                 <td>{{ped.idTarjeta}}</td>
                 <td>{{ped.fechaRegistro}}</td>
                 <td>{{ped.fechaAtencion}}</td>
@@ -40,6 +46,7 @@
                 <td>{{ped.fechaCierre}}</td>
                 <td>{{ped.total}}</td>
                 <td>{{ped.estatus}}</td>
+                
                 {% if current_user.is_authenticated %}
                     <td>
                         <a href="/Pedidos/verpedidos/detallespedidos/{{ped.idPedido}}">
